--- a/index.html
+++ b/index.html
@@ -9,8 +9,46 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
-  <body></body>
+  <body>
+    <header class="navbar">
+      <div class="container navbar-container">
+        <div class="navbar-top">
+          <a href="index.html" class="logo">
+            <img src="img/ehya-logo.svg" alt="Logo: Ehya" class="logo__image" />
+          </a>
+          <ul class="navbar-menu">
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Главная</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Новинки</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Тренды</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Отзывы</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Контакты</a>
+            </li>
+          </ul>
+          <a href="#" class="navbar-menu__link">Выйти</a>
+        </div>
+      </div>
+      <!-- /.navbar-top -->
+    </header>
+    <section class="main">
+      <div class="container container-main"></div>
+      <!-- /.container -->
+    </section>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
