added: adaptive layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="navbar">
-      <div class="container navbar-container">
+      <div class="container container-navbar">
         <div class="navbar-top">
           <a href="index.html" class="logo">
             <img src="img/ehya-logo.svg" alt="Logo: Ehya" class="logo__image" />
@@ -48,6 +48,11 @@
     </header>
     <section class="main">
       <div class="container container-main">
+        <img
+          src="img/image-main.png"
+          alt="main section image"
+          class="main-image"
+        />
         <div class="main-block">
           <a href="#" class="main-badge"># READY TO BE COOL</a>
           <h1 class="main-title">
