fixed: fonts; added: adaptive layout

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             <a href="#" class="navbar-exit">Выйти</a>
           </div>
           <!-- /.navbar-menu -->
+          <button class="menu-button navbar-top__menu-button">
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+          </button>
         </div>
       </div>
       <!-- /.navbar-top -->
@@ -51,11 +56,16 @@
         <img
           src="img/image-main.png"
           alt="main section image"
-          class="main-image"
+          class="main-image main-image-wide"
+        />
+        <img
+          src="img/image-main-narrow.png"
+          alt="main section image"
+          class="main-image main-image-narrow"
         />
         <div class="main-block">
           <a href="#" class="main-badge"># READY TO BE COOL</a>
-          <h1 class="main-title">
+          <h1 class="main-title" lang="en">
             Каждый может <br />быть крутым<br />и модным
           </h1>
           <p class="main-text">
