added: adaptive layout

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                   alt="Icon: get money"
                   class="main-menu__image"
                 />
-                <span class="main-menu__text">Онлайн оплата</span>
+                <span class="main-menu__text" lang="en">Онлайн оплата</span>
               </a>
             </li>
             <li class="main-menu__item">
@@ -92,7 +92,7 @@
                   alt="Icon: protection"
                   class="main-menu__image"
                 />
-                <span class="main-menu__text">Гарантия</span>
+                <span class="main-menu__text" lang="en">Гарантия</span>
               </a>
             </li>
             <li class="main-menu__item">
@@ -102,7 +102,7 @@
                   alt="Icon: like"
                   class="main-menu__image"
                 />
-                <span class="main-menu__text">Качество</span>
+                <span class="main-menu__text" lang="en">Качество</span>
               </a>
             </li>
           </ul>
