added: collection section with adaptive layout

--- a/index.html
+++ b/index.html
@@ -111,6 +111,62 @@
       </div>
       <!-- /.container -->
     </section>
+    <section class="collection">
+      <div class="container container-collection">
+        <div class="collection-gallery">
+          <img
+            src="img/shy.jpg"
+            alt="Collection: shy girl"
+            class="collection-gallery__image"
+          />
+          <img
+            src="img/shy_mobile.jpg"
+            alt="Collection: shy girl"
+            class="collection-gallery__image--mobile"
+          />
+          <img
+            src="img/cafe.jpg"
+            alt="Collection: cafe"
+            class="collection-gallery__image collection-gallery__image--cafe"
+          />
+          <img
+            src="img/room.jpg"
+            alt="Collection: room"
+            class="collection-gallery__image collection-gallery__image--room"
+          />
+        </div>
+        <!-- /.collection-gallery -->
+        <div class="collection-info">
+          <h2 class="collection-info__title" lang="en">
+            Новая зимняя коллекция
+          </h2>
+          <p class="collection-info__text">
+            Сейчас зимний сезон. Вы можете увидеть больше из этой коллекции,
+            нажав кнопку ниже. Успейте купить, пока коллекция есть в наличии.
+            Используйте код EHYA20, чтобы получить 20% скидку.
+          </p>
+          <p class="collection-info__text--mobile">
+            Сейчас зимний сезон. Вы можете увидеть больше из этой коллекции,
+            нажав кнопку ниже. Успейте купить, пока коллекция есть в наличии.
+            Используйте код EHYA20, чтобы получить <br />
+            20% скидку.
+          </p>
+          <a href="#" class="collection-info__link">
+            <span class="collection-info__link-label"
+              >Посмотреть коллекцию</span
+            >
+            <img
+              src="img/arrow.svg"
+              alt="Collection: link arrow"
+              class="collection-info__link-icon"
+            />
+          </a>
+        </div>
+        <!-- /.collection-info -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.collection -->
     <!--<script src="js/jquery-3.5.1.min.js"></script>-->
     <!--<script src="js/swiper-bundle.min.js"></script>-->
     <script src="js/main.js"></script>
