--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ehya</title>
-    <!--<link rel="preconnect" href="https://fonts.gstatic.com" />-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
@@ -21,7 +21,7 @@
           <a href="index.html" class="logo">
             <img src="img/ehya-logo.svg" alt="Logo: Ehya" class="logo__image" />
           </a>
-          <div class="navbar-menu">
+          <div class="navbar-menu__top">
             <ul class="navbar-menu__main">
               <li class="navbar-menu__item">
                 <a href="#" class="navbar-menu__link">Главная</a>
@@ -50,6 +50,33 @@
         </div>
       </div>
       <!-- /.navbar-top -->
+      <div class="navbar-bottom">
+        <div class="container-navbar__bottom">
+          <ul class="navbar-menu">
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Главная</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Новинки</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Тренды</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Отзывы</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link">Контакты</a>
+            </li>
+            <li class="navbar-menu__item">
+              <a href="#" class="navbar-menu__link navbar-exit">Выйти</a>
+            </li>
+          </ul>
+          <!-- /.navbar-menu -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.navbar-bottom -->
     </header>
     <section class="main">
       <div class="container container-main">
@@ -167,7 +194,7 @@
       <!-- /.container -->
     </section>
     <!-- /.collection -->
-    <!--<script src="js/jquery-3.5.1.min.js"></script>-->
+    <script src="js/jquery-3.5.1.min.js"></script>
     <!--<script src="js/swiper-bundle.min.js"></script>-->
     <script src="js/main.js"></script>
   </body>
