fixed: layout errors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="index.html" class="logo">
             <img src="img/ehya-logo.svg" alt="Logo: Ehya" class="logo__image" />
           </a>
-          <div class="navbar-menu__top">
+          <div class="navbar-menu navbar-menu__top">
             <ul class="navbar-menu__main">
               <li class="navbar-menu__item">
                 <a href="#" class="navbar-menu__link">Главная</a>
@@ -51,7 +51,7 @@
       </div>
       <!-- /.navbar-top -->
       <div class="navbar-bottom">
-        <div class="container-navbar__bottom">
+        <div class="container-navbar container-navbar__bottom">
           <ul class="navbar-menu">
             <li class="navbar-menu__item">
               <a href="#" class="navbar-menu__link">Главная</a>
@@ -149,7 +149,7 @@
           <img
             src="img/shy_mobile.jpg"
             alt="Collection: shy girl"
-            class="collection-gallery__image--mobile"
+            class="collection-gallery__image collection-gallery__image--mobile"
           />
           <img
             src="img/cafe.jpg"
@@ -172,7 +172,7 @@
             нажав кнопку ниже. Успейте купить, пока коллекция есть в наличии.
             Используйте код EHYA20, чтобы получить 20% скидку.
           </p>
-          <p class="collection-info__text--mobile">
+          <p class="collection-info__text collection-info__text--mobile">
             Сейчас зимний сезон. Вы можете увидеть больше из этой коллекции,
             нажав кнопку ниже. Успейте купить, пока коллекция есть в наличии.
             Используйте код EHYA20, чтобы получить <br />
