added: trends section

--- a/index.html
+++ b/index.html
@@ -194,6 +194,179 @@
       <!-- /.container -->
     </section>
     <!-- /.collection -->
+    <section class="trends">
+      <div class="container container-trends">
+        <div class="trends-title">
+          <h3 class="trends-title__header" lang="en">Тренды</h3>
+          <div class="trends-title__tabs">
+            <a href="#" class="trends-title__tabs-item">Новинки</a>
+            <a href="#" class="trends-title__tabs-item">Лучшее</a>
+            <a href="#" class="trends-title__tabs-item">Скоро</a>
+          </div>
+          <!-- /.trends-title__tabs -->
+        </div>
+        <!-- /.trends-title -->
+        <div class="trends-cards">
+          <div class="card-item">
+            <img
+              src="img/minimalist.jpg"
+              alt="Trend: minimalist style"
+              class="card-image"
+            />
+            <div class="card-info">
+              <h4 class="card-title" lang="en">Minimalist Style</h4>
+              <span class="card-price">$25.7</span>
+              <a href="#" class="card-basket">
+                <img
+                  src="img/shopping-cart.svg"
+                  alt="Card: basket"
+                  class="card-icon"
+                />
+              </a>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-item -->
+          <div class="card-item">
+            <img
+              src="img/luxury.jpg"
+              alt="Trend: Luxury Gown"
+              class="card-image"
+            />
+            <div class="card-info">
+              <h4 class="card-title" lang="en">Luxury Gown</h4>
+              <span class="card-price">$30.6</span>
+              <a href="#" class="card-basket">
+                <img
+                  src="img/shopping-cart.svg"
+                  alt="Card: basket"
+                  class="card-icon"
+                />
+              </a>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-item -->
+          <div class="card-item">
+            <img
+              src="img/full-coloristy.jpg"
+              alt="Trend: Full Coloristy"
+              class="card-image"
+            />
+            <div class="card-info">
+              <h4 class="card-title" lang="en">Full Coloristy</h4>
+              <span class="card-price">$25.7</span>
+              <a href="#" class="card-basket">
+                <img
+                  src="img/shopping-cart.svg"
+                  alt="Card: basket"
+                  class="card-icon"
+                />
+              </a>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- ./ card-item-->
+          <div class="card-item">
+            <img
+              src="img/pinky-winky.jpg"
+              alt="Trend: Pinky Winky"
+              class="card-image"
+            />
+            <div class="card-info">
+              <h4 class="card-title" lang="en">Pinky Winky</h4>
+              <span class="card-price">$109</span>
+              <a href="#" class="card-basket">
+                <img
+                  src="img/shopping-cart.svg"
+                  alt="Card: basket"
+                  class="card-icon"
+                />
+              </a>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-item -->
+          <div class="card-item">
+            <img
+              src="img/holiday.jpg"
+              alt="Trend: Holiday Vibes"
+              class="card-image"
+            />
+            <div class="card-info">
+              <h4 class="card-title" lang="en">Holiday Vibes</h4>
+              <span class="card-price">$51.2</span>
+              <a href="#" class="card-basket">
+                <img
+                  src="img/shopping-cart.svg"
+                  alt="Card: basket"
+                  class="card-icon"
+                />
+              </a>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-item -->
+          <div class="card-item">
+            <img
+              src="img/swaggie.jpg"
+              alt="Trend: Swaggie Shaggy"
+              class="card-image"
+            />
+            <div class="card-info">
+              <h4 class="card-title" lang="en">Swaggie Shaggy</h4>
+              <span class="card-price">$81.3</span>
+              <a href="#" class="card-basket">
+                <img
+                  src="img/shopping-cart.svg"
+                  alt="Card: basket"
+                  class="card-icon"
+                />
+              </a>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-item -->
+          <div class="card-item">
+            <img
+              src="img/red-format.jpg"
+              alt="Trend: Red Formal"
+              class="card-image"
+            />
+            <div class="card-info">
+              <h4 class="card-title" lang="en">Red Formal</h4>
+              <span class="card-price">$66.8</span>
+              <a href="#" class="card-basket">
+                <img
+                  src="img/shopping-cart.svg"
+                  alt="Card: basket"
+                  class="card-icon"
+                />
+              </a>
+            </div>
+            <!-- /.card-info -->
+          </div>
+          <!-- /.card-item -->
+          <div class="card-item">
+            <div class="card-look-more">
+              <img
+                src="img/plus.svg"
+                alt="Cards: look more"
+                class="card-look-more__icon"
+              />
+              <span class="card-look-more__text" lang="en"
+                >Смотреть<br />больше коллекций</span
+              >
+            </div>
+            <!-- /.card-look-more -->
+          </div>
+          <!-- /.card-item -->
+        </div>
+        <!-- /.trends-cards -->
+      </div>
+      <!-- /.container-trends -->
+    </section>
+    <!-- /.trends -->
     <script src="js/jquery-3.5.1.min.js"></script>
     <!--<script src="js/swiper-bundle.min.js"></script>-->
     <script src="js/main.js"></script>
