added: trends adaptive layout

--- a/index.html
+++ b/index.html
@@ -90,6 +90,23 @@
           alt="main section image"
           class="main-image main-image-narrow"
         />
+        <!--
+                    <img
+              src="img/image-main-wide.jpg"
+              alt="main section image"
+              class="main-image main-image-wide"
+            />
+            <img
+              src="img/image-main-normal.jpg"
+              alt="main section image"
+              class="main-image main-image-normal"
+            />
+            <img
+              src="img/image-main-narrow.jpg"
+              alt="main section image"
+              class="main-image main-image-narrow"
+            />
+-->
         <div class="main-block">
           <a href="#" class="main-badge"># READY TO BE COOL</a>
           <h1 class="main-title" lang="en">
@@ -209,9 +226,19 @@
         <div class="trends-cards">
           <div class="card-item">
             <img
-              src="img/minimalist.jpg"
+              src="img/minimalist-style-1440.jpg"
               alt="Trend: minimalist style"
-              class="card-image"
+              class="card-image__wide"
+            />
+            <img
+              src="img/minimalist-style-768.jpg"
+              alt="Trend: minimalist style"
+              class="card-image__normal"
+            />
+            <img
+              src="img/minimalist-style-320.jpg"
+              alt="Trend: minimalist style"
+              class="card-image__narrow"
             />
             <div class="card-info">
               <h4 class="card-title" lang="en">Minimalist Style</h4>
@@ -229,9 +256,19 @@
           <!-- /.card-item -->
           <div class="card-item">
             <img
-              src="img/luxury.jpg"
+              src="img/luxury-gown-1440.jpg"
               alt="Trend: Luxury Gown"
-              class="card-image"
+              class="card-image__wide"
+            />
+            <img
+              src="img/luxury-gown-768.jpg"
+              alt="Trend: Luxury Gown"
+              class="card-image__normal"
+            />
+            <img
+              src="img/luxury-gown-320.jpg"
+              alt="Trend: Luxury Gown"
+              class="card-image__narrow"
             />
             <div class="card-info">
               <h4 class="card-title" lang="en">Luxury Gown</h4>
@@ -249,9 +286,19 @@
           <!-- /.card-item -->
           <div class="card-item">
             <img
-              src="img/full-coloristy.jpg"
+              src="img/full-coloristy-1440.jpg"
               alt="Trend: Full Coloristy"
-              class="card-image"
+              class="card-image__wide"
+            />
+            <img
+              src="img/full-coloristy-768.jpg"
+              alt="Trend: Full Coloristy"
+              class="card-image__normal"
+            />
+            <img
+              src="img/full-coloristy-320.jpg"
+              alt="Trend: Full Coloristy"
+              class="card-image__narrow"
             />
             <div class="card-info">
               <h4 class="card-title" lang="en">Full Coloristy</h4>
@@ -269,9 +316,19 @@
           <!-- ./ card-item-->
           <div class="card-item">
             <img
-              src="img/pinky-winky.jpg"
+              src="img/pinky-winky-1440.jpg"
               alt="Trend: Pinky Winky"
-              class="card-image"
+              class="card-image__wide"
+            />
+            <img
+              src="img/pinky-winky-768.jpg"
+              alt="Trend: Pinky Winky"
+              class="card-image__normal"
+            />
+            <img
+              src="img/pinky-winky-320.jpg"
+              alt="Trend: Pinky Winky"
+              class="card-image__narrow"
             />
             <div class="card-info">
               <h4 class="card-title" lang="en">Pinky Winky</h4>
@@ -289,9 +346,19 @@
           <!-- /.card-item -->
           <div class="card-item">
             <img
-              src="img/holiday.jpg"
+              src="img/holiday-vibes-1440.jpg"
               alt="Trend: Holiday Vibes"
-              class="card-image"
+              class="card-image__wide"
+            />
+            <img
+              src="img/holiday-vibes-768.jpg"
+              alt="Trend: Holiday Vibes"
+              class="card-image__normal"
+            />
+            <img
+              src="img/holiday-vibes-320.jpg"
+              alt="Trend: Holiday Vibes"
+              class="card-image__narrow"
             />
             <div class="card-info">
               <h4 class="card-title" lang="en">Holiday Vibes</h4>
@@ -309,9 +376,19 @@
           <!-- /.card-item -->
           <div class="card-item">
             <img
-              src="img/swaggie.jpg"
+              src="img/swaggie-shaggy-1440.jpg"
               alt="Trend: Swaggie Shaggy"
-              class="card-image"
+              class="card-image__wide"
+            />
+            <img
+              src="img/swaggie-shaggy-768.jpg"
+              alt="Trend: Swaggie Shaggy"
+              class="card-image__normal"
+            />
+            <img
+              src="img/swaggie-shaggy-320.jpg"
+              alt="Trend: Swaggie Shaggy"
+              class="card-image__narrow"
             />
             <div class="card-info">
               <h4 class="card-title" lang="en">Swaggie Shaggy</h4>
@@ -329,9 +406,19 @@
           <!-- /.card-item -->
           <div class="card-item">
             <img
-              src="img/red-format.jpg"
+              src="img/red-formal-1440.jpg"
               alt="Trend: Red Formal"
-              class="card-image"
+              class="card-image__wide"
+            />
+            <img
+              src="img/red-formal-768.jpg"
+              alt="Trend: Red Formal"
+              class="card-image__normal"
+            />
+            <img
+              src="img/red-formal-320.jpg"
+              alt="Trend: Red Formal"
+              class="card-image__narrow"
             />
             <div class="card-info">
               <h4 class="card-title" lang="en">Red Formal</h4>
@@ -348,17 +435,26 @@
           </div>
           <!-- /.card-item -->
           <div class="card-item">
-            <div class="card-look-more">
-              <img
-                src="img/plus.svg"
-                alt="Cards: look more"
-                class="card-look-more__icon"
-              />
-              <span class="card-look-more__text" lang="en"
-                >Смотреть<br />больше коллекций</span
-              >
+            <img
+              src="img/look-more-1440.jpg"
+              alt="Trend: look more"
+              class="card-image__wide"
+            />
+            <img
+              src="img/look-more-768.jpg"
+              alt="Trend: look more"
+              class="card-image__normal"
+            />
+            <img
+              src="img/look-more-320.jpg"
+              alt="Trend: look more"
+              class="card-image__narrow"
+            />
+            <div class="card-info">
+              <h4 class="card-title" lang="en"></h4>
+              <span class="card-price"></span>
             </div>
-            <!-- /.card-look-more -->
+            <!-- /.card-info -->
           </div>
           <!-- /.card-item -->
         </div>
