added: reviews with slider

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <!--<link rel="stylesheet" href="css/swiper-bundle.min.css" />-->
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -926,8 +926,70 @@
       <!-- /.container-trends -->
     </section>
     <!-- /.trends -->
+    <section class="reviews">
+      <div class="container container-reviews">
+        <img
+          src="img/quote-left.svg"
+          alt="Slider: quote"
+          class="reviews-slider__avatar"
+        />
+        <div class="swiper-container reviews-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <p class="reviews-slider__text" lang="en">
+                  Мне очень нравятся дизайн и стили, которые создает Ehya. Они
+                  такие разные и новаторские. Я покупала несколько раз из
+                  коллекций, и что мне нравится, это то, что они действительно
+                  неподвластны времени, а качество ткани просто превосходно. Я с
+                  нетерпением жду новых коллекций от сезона к сезону
+                </p>
+                <span class="reviews-slider__sign" lang="en">
+                  Алисия Пума - клиент Fashun
+                </span>
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <p class="reviews-slider__text">
+                  Далеко-далеко за словесными горами в стране гласных и
+                  согласных живут рыбные тексты. Города, ведущими по всей
+                  заголовок пор первую всемогущая толку пояс агентство строчка
+                  курсивных безопасную но дал скатился свой мир текстами
+                  продолжил он страну заглавных семантика переписывается
+                  буквоград дорогу?
+                </p>
+                <span class="reviews-slider__sign">
+                  Валерия Сурикат - клиент Fashun
+                </span>
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <p class="reviews-slider__text">
+                  Далеко-далеко за словесными горами в стране гласных и
+                  согласных живут рыбные тексты. Букв единственное ты образ
+                  рыбного бросил, злых по всей пор. Правилами океана там точках
+                  предупредила знаках! Ты продолжил, рукопись пустился собрал
+                  возвращайся жизни домах!
+                </p>
+                <span class="reviews-slider__sign">
+                  Евгения Бобер - клиент Fashun
+                </span>
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+        <!-- /.swiper-pagination -->
+      </div>
+    </section>
+    <!-- /.reviews -->
     <script src="js/jquery-3.5.1.min.js"></script>
-    <!--<script src="js/swiper-bundle.min.js"></script>-->
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
