added: adaptive layout reviews

--- a/index.html
+++ b/index.html
@@ -937,12 +937,34 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="reviews-slider__item">
-                <p class="reviews-slider__text" lang="en">
+                <p
+                  class="reviews-slider__text reviews-slider__text--wide"
+                  lang="en"
+                >
                   Мне очень нравятся дизайн и стили, которые создает Ehya. Они
                   такие разные и новаторские. Я покупала несколько раз из
                   коллекций, и что мне нравится, это то, что они действительно
                   неподвластны времени, а качество ткани просто превосходно. Я с
                   нетерпением жду новых коллекций от сезона к сезону
+                </p>
+                <p
+                  class="reviews-slider__text reviews-slider__text--normal"
+                  lang="en"
+                >
+                  Мне очень нравятся дизайн и стили, которые создает Ehya. Они
+                  такие разные и новаторские. Я покупала несколько раз из
+                  коллекций, и что мне нравится, это то, что они действительно
+                  неподвластны времени, а качество ткани просто превосходно. Я с
+                  нетерпением жду новых коллекций
+                </p>
+                <p
+                  class="reviews-slider__text reviews-slider__text--narrow"
+                  lang="en"
+                >
+                  Мне очень нравятся дизайн и стили, которые создает Ehya. Они
+                  такие разные и новаторские. Я покупала несколько раз из
+                  коллекций, и что мне нравится, это то, что они действительно
+                  неподвластны времени, а качество ткани просто превосходно.
                 </p>
                 <span class="reviews-slider__sign" lang="en">
                   Алисия Пума - клиент Fashun
@@ -956,8 +978,7 @@
                   Далеко-далеко за словесными горами в стране гласных и
                   согласных живут рыбные тексты. Города, ведущими по всей
                   заголовок пор первую всемогущая толку пояс агентство строчка
-                  курсивных безопасную но дал скатился свой мир текстами
-                  продолжил он страну заглавных семантика переписывается
+                  курсивных безопасную заглавных семантика переписывается
                   буквоград дорогу?
                 </p>
                 <span class="reviews-slider__sign">
