added: history section

--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
         <img
           src="img/quote-left.svg"
           alt="Slider: quote"
-          class="reviews-slider__avatar"
+          class="reviews-slider-avatar"
         />
         <div class="swiper-container reviews-slider">
           <div class="swiper-wrapper">
@@ -1009,6 +1009,101 @@
       </div>
     </section>
     <!-- /.reviews -->
+    <section class="history">
+      <div class="container container-history">
+        <div class="history-info">
+          <a href="#" class="history-info-badge">Истории</a>
+          <h1 class="history-info-title" lang="en">Это История<br />Fashun</h1>
+          <p class="history-info-text history-info-text--wide">
+            Ознакомьтесь с нашим рассказом<br />
+            о моде. Написано нашим дизайнером<br />
+            и специалистом.
+          </p>
+          <p class="history-info-text history-info-text--normal">
+            Ознакомьтесь с нашим рассказом о моде. Написано<br />нашим
+            дизайнером и специалистом.
+          </p>
+          <p class="history-info-text history-info-text--narrow">
+            Ознакомьтесь с нашим рассказом<br />
+            о моде. Написано нашим<br />
+            дизайнером и специалистом.
+          </p>
+          <div class="history-info-buttons">
+            <a href="#" class="history-info-buttons__left">
+              <img
+                src="img/button_left.svg"
+                alt="History: button left"
+                class="history-info-buttons__image"
+              />
+            </a>
+            <a href="#" class="history-info-buttons__right">
+              <img
+                src="img/button_right.svg"
+                alt="History: button right"
+                class="history-info-buttons__image"
+              />
+            </a>
+          </div>
+          <!-- /.history-info-buttons -->
+        </div>
+        <!-- /.history-info -->
+        <div class="history-cards">
+          <div class="history-cards__item">
+            <img
+              src="img/history-image-1-1440.jpg"
+              alt="history card image"
+              class="history-cards__image history-cards__image--wide"
+            />
+            <img
+              src="img/history-image-1-768.jpg"
+              alt="history card image"
+              class="history-cards__image history-cards__image--normal"
+            />
+            <img
+              src="img/history-image-1-320.jpg"
+              alt="history card image"
+              class="history-cards__image history-cards__image--narrow"
+            />
+            <div class="history-cards__legend">
+              <p class="history-cards-title" lang="en">
+                Mix & Match Style 01: повседневный и формальный стиль
+              </p>
+              <a href="#" class="history-cards-more">Читать далее</a>
+            </div>
+            <!-- /.history-cards__legend -->
+          </div>
+          <!-- /.history-cards__item -->
+          <div class="history-cards__item">
+            <img
+              src="img/history-image-2-1440.jpg"
+              alt="history card image"
+              class="history-cards__image history-cards__image--wide"
+            />
+            <img
+              src="img/history-image-2-768.jpg"
+              alt="history card image"
+              class="history-cards__image history-cards__image--normal"
+            />
+            <img
+              src="img/history-image-2-320.jpg"
+              alt="history card image"
+              class="history-cards__image history-cards__image--narrow"
+            />
+            <div class="history-cards__legend">
+              <p class="history-cards-title" lang="en">
+                Лайфхак: Купите одежду Thrifft на воскресном рынке
+              </p>
+              <a href="#" class="history-cards-more">Читать далее</a>
+            </div>
+            <!-- /.history-cards__legend -->
+          </div>
+          <!-- /.history-cards__item -->
+        </div>
+        <!-- /.history-cards -->
+      </div>
+      <!-- /.history-container -->
+    </section>
+    <!-- /.history -->
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
