added: history section adaptive layout 768px

--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,15 @@
       <div class="container container-history">
         <div class="history-info">
           <a href="#" class="history-info-badge">Истории</a>
-          <h1 class="history-info-title" lang="en">Это История<br />Fashun</h1>
+          <h1 class="history-info-title history-info-title--wide" lang="en">
+            Это История<br />Fashun
+          </h1>
+          <h1 class="history-info-title history-info-title--normal" lang="en">
+            Это История Fashun
+          </h1>
+          <h1 class="history-info-title history-info-title--narrow" lang="en">
+            История Fashun
+          </h1>
           <p class="history-info-text history-info-text--wide">
             Ознакомьтесь с нашим рассказом<br />
             о моде. Написано нашим дизайнером<br />
