--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+history-slider__narrow<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -1056,6 +1056,7 @@
         </div>
         <!-- /.history-info -->
         <div class="history-cards">
+          <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! HISTORY SLIDER 1 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
           <div class="swiper-container history-slider">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -1115,6 +1116,113 @@
               <div class="swiper-slide">
                 <div class="history-cards__item">
                   <img
+                    src="img/history-image-3.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--wide"
+                  />
+                  <img
+                    src="img/history-image-3.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--normal"
+                  />
+                  <img
+                    src="img/history-image-3.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--narrow"
+                  />
+                  <div class="history-cards__legend">
+                    <p class="history-cards-title" lang="en">Card 3</p>
+                    <a href="#" class="history-cards-more">Читать далее</a>
+                  </div>
+                  <!-- /.history-cards__legend -->
+                </div>
+                <!-- /.history-cards__item -->
+              </div>
+              <div class="swiper-slide">
+                <div class="history-cards__item">
+                  <img
+                    src="img/history-image-4.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--wide"
+                  />
+                  <img
+                    src="img/history-image-4.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--normal"
+                  />
+                  <img
+                    src="img/history-image-4.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--narrow"
+                  />
+                  <div class="history-cards__legend">
+                    <p class="history-cards-title" lang="en">Card 4</p>
+                    <a href="#" class="history-cards-more">Читать далее</a>
+                  </div>
+                  <!-- /.history-cards__legend -->
+                </div>
+                <!-- /.history-cards__item -->
+              </div>
+            </div>
+          </div>
+          <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! HISTORY SLIDER 2 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
+          <div class="swiper-container history-slider-narrow">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide swiper-slide-history">
+                <div class="history-cards__item">
+                  <img
+                    src="img/history-image-3.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--wide"
+                  />
+                  <img
+                    src="img/history-image-3.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--normal"
+                  />
+                  <img
+                    src="img/history-image-3.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--narrow"
+                  />
+                  <div class="history-cards__legend">
+                    <p class="history-cards-title" lang="en">Card 3</p>
+                    <a href="#" class="history-cards-more">Читать далее</a>
+                  </div>
+                  <!-- /.history-cards__legend -->
+                </div>
+                <!-- /.history-cards__item -->
+              </div>
+              <div class="swiper-slide swiper-slide-history">
+                <div class="history-cards__item">
+                  <img
+                    src="img/history-image-1-1440.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--wide"
+                  />
+                  <img
+                    src="img/history-image-1-768.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--normal"
+                  />
+                  <img
+                    src="img/history-image-1-320.jpg"
+                    alt="history card image"
+                    class="history-cards__image history-cards__image--narrow"
+                  />
+                  <div class="history-cards__legend">
+                    <p class="history-cards-title" lang="en">
+                      Mix & Match Style 01: повседневный и формальный стиль
+                    </p>
+                    <a href="#" class="history-cards-more">Читать далее</a>
+                  </div>
+                  <!-- /.history-cards__legend -->
+                </div>
+                <!-- /.history-cards__item -->
+              </div>
+              <div class="swiper-slide swiper-slide-history">
+                <div class="history-cards__item">
+                  <img
                     src="img/history-image-2-1440.jpg"
                     alt="history card image"
                     class="history-cards__image history-cards__image--wide"
@@ -1130,27 +1238,29 @@
                     class="history-cards__image history-cards__image--narrow"
                   />
                   <div class="history-cards__legend">
-                    <p class="history-cards-title" lang="en">Card 3</p>
+                    <p class="history-cards-title" lang="en">
+                      Лайфхак: Купите одежду Thrifft на воскресном рынке
+                    </p>
                     <a href="#" class="history-cards-more">Читать далее</a>
                   </div>
                   <!-- /.history-cards__legend -->
                 </div>
                 <!-- /.history-cards__item -->
               </div>
-              <div class="swiper-slide history-swiper-slide">
+              <div class="swiper-slide swiper-slide-history">
                 <div class="history-cards__item">
                   <img
-                    src="img/history-image-2-1440.jpg"
+                    src="img/history-image-4.jpg"
                     alt="history card image"
                     class="history-cards__image history-cards__image--wide"
                   />
                   <img
-                    src="img/history-image-2-768.jpg"
+                    src="img/history-image-4.jpg"
                     alt="history card image"
                     class="history-cards__image history-cards__image--normal"
                   />
                   <img
-                    src="img/history-image-2-320.jpg"
+                    src="img/history-image-4.jpg"
                     alt="history card image"
                     class="history-cards__image history-cards__image--narrow"
                   />
