added: handling slider buttons

--- a/index.html
+++ b/index.html
@@ -1038,18 +1038,18 @@
           </p>
           <div class="history-info-buttons">
             <a href="#" class="history-info-buttons__left">
-              <img
-                src="img/button_left.svg"
-                alt="History: button left"
-                class="history-info-buttons__image"
-              />
+              <svg
+                class="history-info-buttons__image history-info-buttons__image--left button-off"
+              >
+                <use xlink:href="img/icons.svg#button_left"></use>
+              </svg>
             </a>
             <a href="#" class="history-info-buttons__right">
-              <img
-                src="img/button_right.svg"
-                alt="History: button right"
-                class="history-info-buttons__image"
-              />
+              <svg
+                class="history-info-buttons__image history-info-buttons__image--right button-off"
+              >
+                <use xlink:href="img/icons.svg#button_right"></use>
+              </svg>
             </a>
           </div>
           <!-- /.history-info-buttons -->
